# agnix

./: .agnix.toml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SPEC.md  deny.toml
.claude/: repo-intel.json  repo-map.json
.github/: spec-baselines.json
.github/workflows/: README.md  ci.yml  claude-code-review.yml  claude.yml  docs-site.yml  fuzz.yml  publish-crates.yml  release.yml  security.yml  spec-drift.yml  test-action.yml
.task/: workflow-status.json
Formula/: agnix.rb
crates/agnix-cli/: README.md
crates/agnix-core/: Cargo.toml  README.md
crates/agnix-core/fuzz/: Cargo.toml
crates/agnix-lsp/: README.md
crates/agnix-mcp/: Cargo.toml
crates/agnix-rules/: README.md  rules.json
docs/: CONFIGURATION.md  EDITOR-SETUP.md  RELEASING.md  RUSTSEC-ADVISORIES.md
editors/jetbrains/: README.md  gradle.properties
editors/neovim/: README.md
editors/vscode/: README.md  package-lock.json  package.json
editors/zed/: README.md  extension.toml
knowledge-base/: INDEX.md  MONTHLY-REVIEW.md  README.md  RESEARCH-TRACKING.md  VALIDATION-RULES.md  rules.json
locales/: en.yml  es.yml  zh-CN.yml
lua/agnix/: init.lua
npm/: README.md  install.js  package.json
plugin/: agnix.lua
plugin/.claude-plugin/: plugin.json
plugin/agents/: agnix-agent.md
plugin/commands/: agnix.md
scripts/: check-rule-counts.py  download.sh  generate-docs-rules.py
skills/agnix/: SKILL.md
tests/: cross_crate_integration.rs
website/: docusaurus.config.js  package-lock.json  package.json  versions.json
(+159 files in other folders)
