[package]
name = "agnix-core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
serde_yaml = "0.9"

[dependencies.agnix-core]
path = ".."
features = ["__internal"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_frontmatter"
path = "fuzz_targets/fuzz_frontmatter.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_markdown"
path = "fuzz_targets/fuzz_markdown.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_json"
path = "fuzz_targets/fuzz_json.rs"
test = false
doc = false
bench = false
